[BUGFIX] Adjusted CSS to better position the Readability and SEO SVG icons

--- a/Resources/Private/SCSS/Yoast.scss
+++ b/Resources/Private/SCSS/Yoast.scss
@@ -36,8 +36,7 @@
 		}
 
 		svg {
-			position: relative;
-			top: 3px;
+			vertical-align: middle;
 		}
 	}
 }
